<resources>
    <string name="app_name">Github Repos</string>

    <!--Facebook-->
    <string name="facebook_app_id">620208726303684</string>
    <string name="fb_login_protocol_scheme">fb620208726303684</string>
    <string name="facebook_client_token">5bd284e3ec895ee3529154811e3ce229</string>

    <!--Gmail-->
    <string name="default_web_clint_id">1066542506479-upaoj1bhmnr0uj0k97625sc21f32k48f.apps.googleusercontent.com</string>

    <string name="login_with_facebook">login with Facebook</string>
    <string name="login_with_gmail">Login with Gmail</string>
    <string name="logout">Logout</string>
    <string name="welcome_message">Join Github Repos Explorer</string>
    <string name="signup">Signup</string>
    <string name="sing_in">sing in</string>


    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="re_password">Re password</string>
    <string name="privacy_state">Privacy state</string>
    <string name="icon">icon</string>
    <string name="github_background">github background</string>

    <string name="repo_name_format">Repo name: %s</string>
    <string name="repo_description_format">Description: %s</string>
    <string name="repo_default_branch_format">Default branch: %s</string>
    <string name="repo_language_format">Language: %s</string>

    <string name="watcher_count_format">%s Watchers</string>
    <string name="forks_count_format">%s Forks</string>
    <string name="stars_count_format">%s Stars</string>
    <string name="no_repositories_yet">No Repositories yet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="public_repositories">Public repositories</string>
    <string name="my_repository">My Repository</string>
    <string name="search">Search</string>
    <string name="no_search_result">No search result</string>

</resources>