<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        tools:context=".ui.auth.fragments.SplashFragment">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivAppIcon"
            android:layout_width="283dp"
            android:layout_height="283dp"
            android:layout_marginHorizontal="@dimen/mg_extra_large"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_launcher_foreground_ps" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mg_large"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:layout_constraintBottom_toTopOf="@+id/btnGmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAppIcon" />

        <!--TODO : gmail login button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mg_extra_large"
            android:layout_marginTop="@dimen/mg_default"
            android:backgroundTint="@color/googleColor"
            android:text="@string/login_with_gmail"
            app:layout_constraintBottom_toTopOf="@+id/btnFacebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFacebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mg_extra_large"
            android:backgroundTint="@color/facebookColor"
            android:text="@string/login_with_facebook"
            app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnGmail" />


        <!--
            btnFacebook.setOnClickListener {
                val btn = com.facebook.login.widget.LoginButton(this)
                btn.performClick()
            }
        -->

        <!--TODO : login with email button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mg_extra_large"
            android:text="@string/signup"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFacebook" />

        <!--TODO : register button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/mg_extra_large"
            android:text="@string/sing_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
            app:strokeColor="@color/md_theme_primary" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>