<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="bPublicRepoViewModel"
            type="com.george.copticorphanstask.ui.main.fragments.public_repo_frag.PublicReposViewModel" />

        <variable
            name="bSearchViewModel"
            type="com.george.copticorphanstask.ui.main.fragments.public_repo_frag.PublicReposViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_theme_onSecondary"
        tools:context=".ui.main.fragments.public_repo_frag.PublicReposFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            app:liftOnScroll="true"
            style="@style/MyAppBarLayout">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                app:title="@string/public_repositories"
                style="@style/MyMaterialToolbar"
                app:menu="@menu/public_repos_menu"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            setOnStartSwipeRefresh="@{bPublicRepoViewModel.refreshSwipeEvent}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- info: empty text view -->
                <TextView
                    android:id="@+id/tvEmptyContent"
                    setVisiblyWithBoolean="@{bPublicRepoViewModel.searchEmptyTextShowEvent}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/mg_extra_large"
                    android:gravity="center"
                    android:text="@string/no_repositories_yet"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <!-- info: shimmer effect -->
                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmer"
                    setVisiblyWithBoolean="@{bPublicRepoViewModel.shimmerShowEvent}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    tools:visibility="visible">

                    <include layout="@layout/item_repos_shimmer_content" />

                </com.facebook.shimmer.ShimmerFrameLayout>

                <!-- info: repositories list -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvRepositories"
                    setVisiblyWithBoolean="@{!bPublicRepoViewModel.shimmerShowEvent}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/mg_extra_large"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="3"
                    tools:listitem="@layout/item_github_repo" />

                <!-- info: load more progress -->
                <ProgressBar
                    android:id="@+id/progressPagination"
                    setVisiblyWithBoolean="@{bPublicRepoViewModel.progressShowEvent}"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="@dimen/mg_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnMyRepos"
            android:layout_gravity="bottom|end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/my_repository"
            android:src="@drawable/ic_user"
            android:layout_margin="@dimen/mg_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:useCompatPadding="true" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>